<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_title"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:weightSum="1">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_marginTop="150dp">

        <Button
            android:id="@+id/signin_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin_button"
            android:drawablePadding="4dp"/>

        <Button
            android:id="@+id/advance_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advance_button"
            android:drawablePadding="4dp"/>
        <Button
            android:id="@+id/surprise_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surprise_button"
            android:drawablePadding="4dp"/>


    </LinearLayout>

    <TextView
        android:id="@+id/welcome_text"
        android:text="@string/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <fragment
        android:id="@+id/place_autocomplete_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
        />
    <Button
        android:id="@+id/search_button"
        android:text="@string/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/new_business"
            android:text="@string/new_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"/>


    </LinearLayout>


</LinearLayout>